# esp32-p4_desktop-assistant

./: CMakeLists.txt  README.md  partitions-16MiB-ota.csv  partitions-16MiB.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/BSP/: CMakeLists.txt
components/BSP/KEY/: key.c  key.h
components/BSP/LCD/: mipi_lcd.h
components/BSP/LED/: led.h
components/BSP/LEDC/: ledc.c  ledc.h
components/BSP/MYES8311/: myes8311.c  myes8311.h
components/BSP/MYI2S/: myi2s.c  myi2s.h
components/BSP/MYIIC/: myiic.c  myiic.h
components/BSP/RTC/: esp_rtc.c  esp_rtc.h
components/BSP/TOUCH/: gt9xxx.c
components/BSP/TWAI/: my_esp_twai.c  my_esp_twai.h
components/BSP/bh1750/: bh1750.c  bh1750.h
components/BSP/dht11/: dht11.c  dht11.h
components/BSP/led1/: led1.c  led1.h
components/BSP/motor/: motor.c  motor.h
components/Middlewares/PICTURE/: CMakeLists.txt  bmp.c  bmp.h  gif.c  gif.h  jpeg.c  jpeg.h  piclib.c  piclib.h  png.c  png.h
main/: CMakeLists.txt  ai_model.cpp  ai_model.h  idf_component.yml  list.h  main.c  ota_update.c  ota_update.h  smart_home_ctrl.c  smart_home_ctrl.h  smart_light_model.h
main/APP/: esp_lvgl_port.c  esp_lvgl_port.h  esp_lvgl_port_disp.c  lvgl_demo.c  lvgl_demo.h
main/APP/HANDLE/: handle.c  handle.h  voice_control.c  voice_control.h
main/APP/HID_MSC/: usb_hid_msc.c  usb_hid_msc.h
main/APP/IMAGE/: Bluetooth.c  Brightness.c  Flight_Mode.c  Mobile_Signal.c  WIFI.c  app.c  app_2048.c  app_calendar.c  brush.c  calculator.c  camera.c  file.c  game2048_start_img.c  image.c  l_file.c  l_wifi.c  lv_wifi.c  music.c  timer.c  usb.c  usb_otg.c  video.c  volumeHigh.c  wifi0.c  wifi1.c  wifi2.c  wifi3.c
main/APP/MAIN_UI/: app_2048.c  app_2048.h  app_brush.c  app_brush.h  app_calculator.c  app_calculator.h  app_calendar.c  app_calendar.h  app_camera.c  app_camera.h  app_detect.c  app_detect.h  app_file.c  app_file.h  app_main_ui.c  app_main_ui.h  app_music.c  app_music.h  app_pic.c  app_pic.h  app_timer.c  app_timer.h  app_usb_otg.c  app_usb_otg.h  app_video_ui.c  app_video_ui.h  app_wifi.c  app_wifi.h  mytimer.c  mytimer.h
main/APP/MIPI_CAM/: app_video.c  mipi_cam.c  mipi_cam.h
(+4 files in other folders)
